--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -7,23 +7,47 @@
   </div>
   <p-divider></p-divider>
   <div>
-    <div class="flex justify-content-between align-items-center my-5">
+    <div class="flex justify-content-between align-items-end my-5">
       <div class="text-sm">Article Found {{ selectedArticles.length }} / {{ totalRecords }}</div>
-      <div class="flex gap-2">
-        <div>
+      <div class="flex align-items-end gap-3">
+        <div class="flex flex-column gap-2">
+          <label class="font-semibold text-sm"> Select by </label>
+          <p-dropdown
+            [formControl]="searchForm.controls['field']"
+            [options]="searchFieldOptions"
+            optionLabel="label"
+            optionValue="value"
+            placeholder="Select..." />
+        </div>
+
+        <div class="flex flex-column gap-2">
+          <label class="font-semibold text-sm"> Search </label>
           <span class="p-input-icon-right">
-            <input type="text" pInputText placeholder="Search" class="py-2" (keyup)="search(getValue($event))" />
+            <input type="text" pInputText placeholder="Search" [formControl]="searchForm.controls['query']" />
             <i class="pi pi-search"></i>
           </span>
         </div>
-        <div>
-          <p-confirmPopup></p-confirmPopup>
-          <p-button label="Action" icon="pi pi-file-edit" [disabled]="!selectedArticles.length" (click)="menu.toggle($event)"></p-button
-          ><p-tieredMenu #menu [model]="updateToneItems" [popup]="true"></p-tieredMenu>
-        </div>
-        <p-confirmPopup></p-confirmPopup>
-        <div>
-          <p-button icon="pi pi-trash" severity="danger" [disabled]="!selectedArticles.length" (click)="deleteArticle($event)"></p-button>
+
+        <div class="flex gap-2">
+          <div>
+            <p-confirmPopup></p-confirmPopup>
+            <p-button
+              label="Action"
+              icon="pi pi-file-edit"
+              size="large"
+              [disabled]="!selectedArticles.length"
+              (click)="menu.toggle($event)"></p-button
+            ><p-tieredMenu #menu [model]="listAction" [popup]="true"></p-tieredMenu>
+          </div>
+          <div>
+            <p-confirmPopup></p-confirmPopup>
+            <p-button
+              icon="pi pi-trash"
+              severity="danger"
+              size="large"
+              [disabled]="!selectedArticles.length"
+              (click)="deleteArticle($event)"></p-button>
+          </div>
         </div>
       </div>
     </div>
@@ -37,7 +61,7 @@
           [rows]="10"
           [totalRecords]="totalRecords"
           [showFirstLastIcon]="false"
-          [loading]="loading"
+          [loading]="isLoading"
           [tableStyle]="{ 'min-width': '50rem' }">
           <ng-template pTemplate="header">
             <tr class="text-sm font-medium">
@@ -54,6 +78,7 @@
                   Media Name
                   <i pSortableColumn="media_name" class="pi pi-angle-down"></i>
                   <p-columnFilter
+                    #columnFilter
                     field="tone"
                     matchMode="in"
                     display="menu"
@@ -61,23 +86,30 @@
                     [showOperator]="false"
                     [showAddButton]="false"
                     [showApplyButton]="false"
-                    [showClearButton]="false">
+                    [showClearButton]="false"
+                    class="columnFilter">
                     <ng-template pTemplate="filter" let-value let-filter="filterCallback">
-                      <p-multiSelect
-                        [options]="toneOptions"
-                        optionLabel="label"
-                        [showHeader]="false"
-                        [(ngModel)]="selectedTones"
-                        placeholder="Select..">
-                        <ng-template let-option pTemplate="item">
-                          <div class="inline-block vertical-align-middle">
-                            <span class="ml-1 mt-1">{{ option.label }}</span>
-                          </div>
-                        </ng-template>
-                      </p-multiSelect>
-                      <div class="flex gap-2">
-                        <button class="mt-4" pButton [outlined]="true" type="button" label="Clear" (click)="clear()"></button>
-                        <button class="mt-4" pButton type="button" label="Apply" (click)="filterCallback()"></button>
+                      <div class="w-full" style="min-width: 320px">
+                        <div class="flex flex-column gap-2">
+                          <label class="font-semibold text-sm"> Tones </label>
+                          <p-multiSelect
+                            [options]="toneOptions"
+                            optionLabel="label"
+                            [showHeader]="false"
+                            [(ngModel)]="selectedTones"
+                            placeholder="Select...">
+                            <ng-template let-option pTemplate="item">
+                              <div class="inline-block vertical-align-middle">
+                                <span class="ml-1 mt-1">{{ option.label }}</span>
+                              </div>
+                            </ng-template>
+                          </p-multiSelect>
+                        </div>
+
+                        <div class="flex gap-2">
+                          <button class="mt-4" pButton [outlined]="true" type="button" label="Clear" (click)="clear()"></button>
+                          <button class="mt-4" pButton type="button" label="Apply" (click)="fetchData()"></button>
+                        </div>
                       </div>
                     </ng-template>
                   </p-columnFilter>
@@ -86,7 +118,7 @@
               <th>
                 <div class="flex align-items-center gap-2">
                   News Title
-                  <i pSortablxxeColumn="title" class="pi pi-angle-down"></i>
+                  <i pSortableColumn="title" class="pi pi-angle-down"></i>
                 </div>
               </th>
               <th style="width: 4rem" class="text-center">
@@ -167,6 +199,7 @@
           </ng-template>
         </p-table>
         <p-paginator
+          *ngIf="totalRecords"
           (onPageChange)="onPageChange($event)"
           [first]="first"
           [rows]="rows"
@@ -196,79 +229,111 @@
       <span class="font-bold">Edit article</span>
     </div>
   </ng-template>
-  <form [formGroup]="editedValues" class="flex flex-column gap-4">
-    <div class="flex flex-column gap-2">
-      <label class="font-semibold" for="title">Title</label>
-      <input pInputText formControlName="title" id="title" class="text-xs" />
-    </div>
-    <div class="grid">
-      <div class="col-6">
-        <div class="flex justify-content-between">
-          <div class="text-xs font-semibold">Date:</div>
-          <div class="text-xs">{{ editedArticle?.datee ?? '-' }}</div>
-        </div>
+
+  <ng-container *ngIf="editedArticle">
+    <form [formGroup]="editedValues" class="flex flex-column gap-4">
+      <div class="flex flex-column gap-2">
+        <label class="font-semibold" for="title">Title</label>
+        <input pInputText formControlName="title" id="title" class="text-xs" />
       </div>
-      <div class="col-6">
-        <div class="flex justify-content-between">
-          <div class="text-xs font-semibold">News Value:</div>
-          <div class="text-xs">
-            {{ editedArticle?.advalue_bw ?? 0 | formatAmount }}
+      <div class="grid">
+        <div class="col-6">
+          <div class="flex justify-content-between">
+            <div class="text-xs font-semibold">Date:</div>
+            <div class="text-xs">
+              {{ editedArticle.datee ? editedArticle.datee : '' }}
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="flex justify-content-between">
+            <div class="text-xs font-semibold">News Value:</div>
+            <div class="text-xs">
+              {{ editedArticle.advalue_bw ?? 0 | formatAmount }}
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="flex justify-content-between">
+            <div class="text-xs font-semibold">Media:</div>
+            <div class="text-xs">
+              {{ editedArticle.media_name ? editedArticle.media_name : '-' }}
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="flex justify-content-between">
+            <div class="text-xs font-semibold">Ad Value:</div>
+            <div class="text-xs">
+              {{ editedArticle.advalue_fc ?? 0 | formatAmount }}
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="flex justify-content-between">
+            <div class="text-xs font-semibold">Option:</div>
+            <a class="text-xs" [href]="editedArticle.preview_link" target="_blank">Preview</a>
           </div>
         </div>
       </div>
-      <div class="col-6">
-        <div class="flex justify-content-between">
-          <div class="text-xs font-semibold">Media:</div>
-          <div class="text-xs">{{ editedArticle?.media_name ?? '-' }}</div>
-        </div>
+      <div class="flex flex-column gap-2">
+        <label class="font-semibold" for="issue">Issue</label>
+        <input pInputText formControlName="issue" id="issue" class="text-xs" />
       </div>
-      <div class="col-6">
-        <div class="flex justify-content-between">
-          <div class="text-xs font-semibold">Ad Value:</div>
-          <div class="text-xs">
-            {{ editedArticle?.advalue_fc ?? 0 | formatAmount }}
-          </div>
-        </div>
+      <div class="flex flex-column gap-2">
+        <label class="font-semibold" for="summary">Summary</label>
+        <textarea pInputTextarea formControlName="summary" id="summary" class="text-xs" rows="5"></textarea>
       </div>
-      <div class="col-6">
-        <div class="flex justify-content-between">
-          <div class="text-xs font-semibold">Option:</div>
-          <a class="text-xs" [href]="editedArticle?.preview_link" target="_blank">Preview</a>
-        </div>
+      <div class="flex flex-column gap-2">
+        <label class="font-semibold" for="content">Content</label>
+        <div class="text-xs" [innerHTML]="sanitizedContent ?? editedArticle.content"></div>
       </div>
-    </div>
-    <div class="flex flex-column gap-2">
-      <label class="font-semibold" for="issue">Issue</label>
-      <input pInputText formControlName="issue" id="issue" class="text-xs" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <label class="font-semibold" for="summary">Summary</label>
-      <textarea pInputTextarea formControlName="summary" id="summary" class="text-xs" rows="5"></textarea>
-    </div>
-    <div class="flex flex-column gap-2">
-      <label class="font-semibold" for="content">Content</label>
-      <div class="text-xs" [innerHTML]="sanitizedContent ?? editedArticle?.content ?? ''"></div>
-    </div>
-  </form>
-  <p-multiSelect
-    [options]="availableCategories"
-    [filter]="false"
-    [(ngModel)]="editedCategories"
-    dataKey="category_id"
-    placeholder="Select Cateogry"
-    optionLabel="category_id"
-    display="chip"
-    appendTo="body"
-    styleClass="text-xs w-full mt-4"></p-multiSelect>
+    </form>
+
+    <p-multiSelect
+      [options]="availableCategories"
+      [filter]="false"
+      [(ngModel)]="editedCategories"
+      dataKey="category_id"
+      placeholder="Select Cateogry"
+      optionLabel="category_id"
+      display="chip"
+      appendTo="body"
+      styleClass="text-xs w-full mt-4"></p-multiSelect>
+  </ng-container>
+
   <ng-template pTemplate="footer">
-    <p-button (click)="modalUpdateOpen = false" label="Cancel" pAutoFocus [outlined]="true" [loading]="isUpdating"></p-button>
+    <p-button (click)="modalUpdateOpen = false" label="Cancel" pAutoFocus [outlined]="true" [loading]="isLoading"></p-button>
     <p-button
       icon="pi pi-check"
       (click)="updateArticle()"
       label="Save"
       pAutoFocus
       [disabled]="!user?.stat_edit"
-      [loading]="isUpdating"
+      [loading]="isLoading"
       [autofocus]="true"></p-button>
   </ng-template>
+</p-dialog>
+
+<p-dialog
+  [(visible)]="showSendMailDialog"
+  [modal]="true"
+  [closeOnEscape]="true"
+  [closable]="true"
+  [dismissableMask]="true"
+  [draggable]="false">
+  <p-header class="text-base">Send to E-mail</p-header>
+  <div class="flex flex-column gap-2">
+    <p class="pb-2">
+      If more than 1 email is to be sent then use a comma (,) to separate the email. <br />
+      Example: abc&#64;mail.com, def&#64;mail.com
+    </p>
+
+    <label for="email" class="font-semibold text-sm">E-mail</label>
+    <input pInputText id="email" placeholder="abc@mail.com, def@mail.com" [formControl]="sendMailCtrl" />
+  </div>
+  <p-footer>
+    <p-button (click)="showSendMailDialog = false" label="Cancel" [outlined]="true"></p-button>
+    <p-button (click)="sendMail()" pAutoFocus label="Send" [autofocus]="true" [disabled]="!isValidEmail(sendMailCtrl.value)"></p-button>
+  </p-footer>
 </p-dialog>
