--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -22,9 +22,9 @@
             <div class="p-menuitem-link flex justify-content-between align-items-center cursor-pointer">
               <div class="flex align-items-center gap-2">
                 <icon-newspaper
+                  *ngIf="item.key === 'media'"
                   [width]="20"
                   [height]="20"
-                  *ngIf="item.key === 'media'"
                   [class]="activeTab?.['key'] === 'media' ? 'fill-primary' : ''"></icon-newspaper>
                 <icon-pencil
                   *ngIf="item.key === 'coverage'"
@@ -53,39 +53,34 @@
   [modal]="true"
   [style]="{ width: '50rem' }"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
-  <ng-template pTemplate="header">
-    <div class="inline-flex align-items-center justify-content-center gap-2">
-      <span class="font-bold text-md">Download Excel File</span>
-    </div>
-  </ng-template>
+  <p-header class="text-base">Download Excel File</p-header>
   <div>
     <div class="mb-2 font-semibold">Columns:</div>
     <p-listbox
       [(ngModel)]="selectedColumns"
       [options]="columnsOptions"
-      [selectAll]="isSelectAllColumns"
+      [selectAll]="selectedColumns.length === columnsOptions.length"
       optionLabel="label"
       [multiple]="true"
       [checkbox]="true"
       [metaKeySelection]="false"
       [showToggleAll]="true"
-      (onChange)="onChangeColumn($event)"
-      (onSelectAllChange)="onSelectAllColumnsChange($event)"></p-listbox>
+      (onSelectAllChange)="onCheckedAllColumn($event.checked)"></p-listbox>
+
     <div class="mt-4 mb-2 font-semibold">Categories:</div>
     <p-listbox
       [(ngModel)]="selectedCategories"
       [options]="categoriesOptions"
-      [selectAll]="isSelectAllCategories"
+      [selectAll]="selectedCategories.length === categoriesOptions.length"
       optionLabel="label"
       [multiple]="true"
       [checkbox]="true"
       [metaKeySelection]="false"
       [showToggleAll]="true"
-      (onChange)="onChangeCategory($event)"
-      (onSelectAllChange)="onSelectAllCategoryChange($event)"></p-listbox>
+      (onSelectAllChange)="onCheckedAllCategory($event.checked)"></p-listbox>
   </div>
   <div class="mt-5"><span class="font-semibold">Note:</span> you can only download the columns that are selected.</div>
-  <ng-template pTemplate="footer">
+  <p-footer>
     <div class="pt-4">
       <p-button
         (click)="downloadExcelConfirmModalOpen = false"
@@ -102,7 +97,7 @@
         [loading]="isDownloadingExcel"
         (click)="downloadExcel()"></p-button>
     </div>
-  </ng-template>
+  </p-footer>
 </p-dialog>
 
 <p-dialog
@@ -111,11 +106,7 @@
   [modal]="true"
   [style]="{ width: '50rem' }"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
-  <ng-template pTemplate="header">
-    <div class="inline-flex align-items-center justify-content-center gap-2">
-      <span class="font-bold text-md">Download PPT file</span>
-    </div>
-  </ng-template>
+  <p-header class="font-bold text-base"> Download PPT file </p-header>
   <div>
     <div *ngFor="let image of images">
       <img [src]="image.image" class="w-full" />
