--- a/src/app/modules/dashboard/articles-by-media/articles-by-media.component.html
+++ b/src/app/modules/dashboard/articles-by-media/articles-by-media.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="mb-4">
-    <div class="text-xl font-semibold" appTitleCase>Article of {{ mediaName ?? topic }}</div>
+    <div class="text-xl font-semibold" appTitleCase>Article of {{ mediaName || topic }}</div>
   </div>
   <spinner [spinning]="isLoading">
     <article-list
