--- a/src/app/modules/dashboard/preference/media-list/media-list.component.html
+++ b/src/app/modules/dashboard/preference/media-list/media-list.component.html
@@ -9,7 +9,7 @@
         iconPos="left"
         styleClass="border-0"
         [style]="{ backgroundColor: '#F1F4FA' }"
-        (onClick)="modalAddOpen = true">
+        (onClick)="resetForm(); showAddModal = true">
         <div class="flex gap-2 align-items-center">
           <i class="pi pi-plus text-primary"></i>
           <div class="text-sm" style="color: #464255 !important">Add Media</div>
@@ -25,7 +25,7 @@
         [rows]="10"
         [totalRecords]="totalRecords"
         [showFirstLastIcon]="false"
-        [loading]="loading"
+        [loading]="isLoading"
         [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
           <tr class="text-sm font-medium">
@@ -44,12 +44,10 @@
             <th style="width: 4rem" class="text-center"><div>Action</div></th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-media let-expanded="expanded">
+        <ng-template pTemplate="body" let-media let-i="rowIndex" let-expanded="expanded">
           <tr class="text-sm">
             <td>
-              <div class="flex align-items-center gap-2">
-                {{ media.idx }}
-              </div>
+              <p>{{ i + 1 }}</p>
             </td>
             <td>
               <div class="flex align-items-center gap-1 w-max">
@@ -101,7 +99,7 @@
 
 <p-dialog
   header="Header"
-  [(visible)]="modalAddOpen"
+  [(visible)]="showAddModal"
   [modal]="true"
   [style]="{ width: '50rem' }"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
@@ -110,66 +108,65 @@
       <span class="font-bold text-md">Create media</span>
     </div>
   </ng-template>
-  <form [formGroup]="createValues" class="flex flex-column gap-4">
+  <form [formGroup]="form" class="flex flex-column gap-4">
     <div class="flex flex-column gap-2">
       <label for="media" class="font-semibold text-sm">Media Name</label>
-      <input pInputText formControlName="media" id="media" placeholder="Media Name" />
+      <input pInputText id="media" placeholder="Media Name" formControlName="user_media_type_name_def" />
     </div>
   </form>
   <ng-template pTemplate="footer">
-    <p-button (click)="modalAddOpen = false" label="Cancel" [outlined]="true"></p-button>
-    <p-button
-      (click)="createMedia()"
-      label="Submit"
-      pAutoFocus
-      [autofocus]="true"
-      [disabled]="!this.createValues.controls.media.valid"></p-button>
+    <p-button (click)="showAddModal = false" label="Cancel" [outlined]="true"></p-button>
+    <p-button (click)="createMedia()" label="Submit" pAutoFocus [autofocus]="true" [disabled]="form.invalid"></p-button>
   </ng-template>
 </p-dialog>
 
 <p-dialog
   header="Header"
-  [(visible)]="modalUpdateOpen"
+  [(visible)]="showUpdateModal"
   [modal]="true"
-  [style]="{ width: '50rem' }"
+  [style]="{ width: '50rem', height: 'auto' }"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
   <ng-template pTemplate="header">
     <div class="inline-flex align-items-center justify-content-center gap-2">
       <span class="font-bold text-md">Detail Media</span>
     </div>
   </ng-template>
-  <form [formGroup]="editedValues" class="flex flex-column gap-4">
+  <form [formGroup]="form" class="flex flex-column gap-4">
     <div class="flex flex-column gap-2">
       <label for="media" class="text-sm">Media Name</label>
-      <input pInputText formControlName="media" id="media" />
+      <input pInputText formControlName="user_media_type_name_def" />
     </div>
   </form>
+
   <div class="mt-4">
     <p-treeSelect
       class="w-full md:w-20rem"
       containerStyleClass="w-full border-200"
-      [(ngModel)]="selectedMediaGroups"
-      [options]="mediaGroupsOptions"
-      [filter]="true"
-      [filterInputAutoFocus]="true"
-      [metaKeySelection]="false"
-      [virtualScroll]="true"
-      [virtualScrollItemSize]="46"
-      [containerStyle]="{ backgroundColor: 'var(--bg-color)' }"
-      [virtualScrollOptions]="{ scrollHeight: '320px' }"
       placeholder="Select"
       appendTo="body"
-      selectionMode="checkbox"></p-treeSelect>
+      selectionMode="checkbox"
+      [options]="listMediaGroup"
+      [(ngModel)]="listSelectedMediaGroup"
+      [filter]="true"
+      filterPlaceholder="Search"
+      filterBy="label"
+      [filterInputAutoFocus]="true"
+      [metaKeySelection]="false"
+      [containerStyle]="{ backgroundColor: 'var(--bg-color)' }"
+      [virtualScroll]="true"
+      [virtualScrollItemSize]="46"
+      [virtualScrollOptions]="{ scrollHeight: '320px' }">
+    </p-treeSelect>
   </div>
   <ng-template pTemplate="footer">
-    <p-button (click)="modalUpdateOpen = false" label="Cancel" pAutoFocus [outlined]="true"></p-button>
+    <p-button (click)="showUpdateModal = false" label="Cancel" pAutoFocus [outlined]="true"></p-button>
     <p-button (click)="updateMedia()" label="Save" pAutoFocus [autofocus]="true"></p-button>
   </ng-template>
 </p-dialog>
 
 <p-dialog
   header="Header"
-  [(visible)]="modalDeleteOpen"
+  [(visible)]="showDeleteModal"
   [modal]="true"
   [style]="{ width: '50rem' }"
   [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
@@ -184,10 +181,10 @@
     <div class="text-md">Do you really want to delete this data? <br />this process can't be undone.</div>
   </div>
   <ng-template pTemplate="footer">
-    <p-button (click)="modalDeleteOpen = false" label="Cancel" pAutoFocus [outlined]="true"></p-button>
+    <p-button (click)="showDeleteModal = false" label="Cancel" pAutoFocus [outlined]="true"></p-button>
     <p-button
       (click)="confirmDeleteMedia()"
-      [loading]="isDeleting"
+      [loading]="isLoading"
       label="Delete"
       severity="danger"
       pAutoFocus
